    - MWRestrictions
    - MWFileProps
    - ExecutableFinder
    - FileContentsHasher
  - Watchlist related hook: MediaWiki\Hook => MediaWiki\Watchlist\Hook
    - WatchedItemQueryServiceExtensionsHook
  - The LockManager library: Wikimedia\LockManager
    - FSLockManager
    - LockManager
    - MemcLockManager
    - NullLockManager
    - QuorumLockManager
    - RedisLockManager
    - ScopedLock
* Using an int for the $mode parameter of LanguageFallback::getAll() is now
  deprecated.  Use the new LanguageFallbackMode enumeration instead.
* LanguageFallback::MESSAGES and LanguageFallback::STRICT are deprecated; use
  LanguageFallbackModes::{MESSAGES,STRICT} instead.
* IDatabase::lockIsFree is deprecated. For non-blocking locks, use
  IDatabase::lock with timeout 0 instead.
* The AutopromoteCondition hook has been deprecated and will now trigger
  deprecation warnings. Use UserRequirementsCondition hook, instead.
* The RecentChange::parseToRCType and RecentChange::parseFromRCType methods are
  deprecated and will now trigger deprecation warnings.
* Parser::makeImage() has been deprecated with warnings; use
  ::makeImageHtml() instead, which doesn't expose the internal LinkHolderArray.
* Parser::replaceLinkHolders() now emits deprecation warnings; it was
  deprecared in 1.34.
* The WatchedItemQueryServiceExtensions hook is deprecated and is no longer
  called. Use ApiQueryBaseBeforeQuery, ApiQueryBaseAfterQuery,
  ApiQueryBaseProcessRow and ApiQueryWatchlistExtractOutputData.
* ApiUpload::getDummyInstance was deprecated, subclasses of ApiUpload can use
  ApiUpload::getUploadImageInfo() instead.
* The UserLinkRenderer service has been marked @internal and the
  UserLinkRenderer::userLink() method has been deprecated. Use
  LinkRenderer::makeUserLink() instead. Calls to Linker::userLink()
  method, deprecated in 1.44, should also use LinkRenderer::makeUserLink().
  Users of the UserLinkRenderer service should use LinkRenderer.