@@ -770,7 +770,7 @@ $wgAutoloadLocalClasses = [
 	'ManageForeignResources' => __DIR__ . '/maintenance/manageForeignResources.php',
 	'ManageJobs' => __DIR__ . '/maintenance/manageJobs.php',
 	'ManualLogEntry' => __DIR__ . '/includes/Logging/ManualLogEntry.php',
-	'MapCacheLRU' => __DIR__ . '/includes/libs/MapCacheLRU/MapCacheLRU.php',
+	'MapCacheLRU' => __DIR__ . '/includes/libs/ObjectCache/MapCacheLRU.php',
 	'MappedIterator' => __DIR__ . '/includes/libs/MappedIterator.php',
 	'MarkpatrolledAction' => __DIR__ . '/includes/Actions/MarkpatrolledAction.php',
 	'McTest' => __DIR__ . '/maintenance/mctest.php',
@@ -4403,7 +4403,7 @@ $wgAutoloadLocalClasses = [
 	'Wikimedia\\LockManager\\QuorumLockManager' => __DIR__ . '/includes/libs/LockManager/QuorumLockManager.php',
 	'Wikimedia\\LockManager\\RedisLockManager' => __DIR__ . '/includes/libs/LockManager/RedisLockManager.php',
 	'Wikimedia\\LockManager\\ScopedLock' => __DIR__ . '/includes/libs/LockManager/ScopedLock.php',
-	'Wikimedia\\MapCacheLRU\\MapCacheLRU' => __DIR__ . '/includes/libs/MapCacheLRU/MapCacheLRU.php',
+	'Wikimedia\\MapCacheLRU\\MapCacheLRU' => __DIR__ . '/includes/libs/ObjectCache/MapCacheLRU.php',
 	'Wikimedia\\Message\\DataMessageValue' => __DIR__ . '/includes/libs/Message/DataMessageValue.php',
 	'Wikimedia\\Message\\IMessageFormatterFactory' => __DIR__ . '/includes/libs/Message/IMessageFormatterFactory.php',
 	'Wikimedia\\Message\\ITextFormatter' => __DIR__ . '/includes/libs/Message/ITextFormatter.php',
@@ -4428,6 +4428,7 @@ $wgAutoloadLocalClasses = [
 	'Wikimedia\\ObjectCache\\EmptyBagOStuff' => __DIR__ . '/includes/libs/ObjectCache/EmptyBagOStuff.php',
 	'Wikimedia\\ObjectCache\\HashBagOStuff' => __DIR__ . '/includes/libs/ObjectCache/HashBagOStuff.php',
 	'Wikimedia\\ObjectCache\\IStoreKeyEncoder' => __DIR__ . '/includes/libs/ObjectCache/IStoreKeyEncoder.php',
+	'Wikimedia\\ObjectCache\\MapCacheLRU' => __DIR__ . '/includes/libs/ObjectCache/MapCacheLRU.php',
 	'Wikimedia\\ObjectCache\\MediumSpecificBagOStuff' => __DIR__ . '/includes/libs/ObjectCache/MediumSpecificBagOStuff.php',
 	'Wikimedia\\ObjectCache\\MemcachedBagOStuff' => __DIR__ . '/includes/libs/ObjectCache/MemcachedBagOStuff.php',
 	'Wikimedia\\ObjectCache\\MemcachedPeclBagOStuff' => __DIR__ . '/includes/libs/ObjectCache/MemcachedPeclBagOStuff.php',
